--- a/index.html
+++ b/index.html
@@ -154,15 +154,15 @@ https://www.tooplate.com/view/2119-gymso-fitness
 
                             <div class="ml-lg-auto col-lg-3 col-md-6 col-12" data-aos="fade-up" data-aos-delay="700">
                                 <div class="team-thumb">
-                                    <img src="images/forma1.jpg" class="img-fluid" alt="Trainer">
+                                    <img src="images/unidade1.png" class="img-fluid" alt="Trainer">
 
                                     <div class="team-info d-flex flex-column">
 
-                                        <h3>Lagoa da Conceição</h3>
-                                        <span>Unidade 1</span>
+                                        <h3>Unidade 1</h3>
+                                        <span>Alves de Brito</span>
 
                                         <ul class="social-icon mt-3">
-                                            <li><a href="https://www.instagram.com/formafitnessfloripa/" class="fa fa-instagram"></a></li>
+                                            <li><a href="https://www.instagram.com/ata.premium/" class="fa fa-instagram"></a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -170,15 +170,15 @@ https://www.tooplate.com/view/2119-gymso-fitness
 
                             <div class="mr-lg-auto mt-5 mt-lg-0 mt-md-0 col-lg-3 col-md-6 col-12" data-aos="fade-up" data-aos-delay="800">
                                 <div class="team-thumb">
-                                    <img src="images/forma2.jpg" class="img-fluid" alt="Trainer">
+                                    <img src="images/unidade2.png" class="img-fluid" alt="Trainer">
 
                                     <div class="team-info d-flex flex-column">
 
-                                        <h3>Cachoeira do bom jesus</h3>
-                                        <span>Unidade 2</span>
+                                        <h3>Unidade 2</h3>
+                                        <span>Antenor Mesquita</span>
 
                                         <ul class="social-icon mt-3">
-                                            <li><a href="https://www.instagram.com/formafitnesscbj/?igshid=YTY2NzY3YTc%3D" class="fa fa-instagram"></a></li>
+                                            <li><a href="https://www.instagram.com/ata.premium" class="fa fa-instagram"></a></li>
                                             
                                         </ul>
                                     </div>
